--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav >
         <ul class="nav justify-content-center"  style=" background-color:white">
  <li class="nav-item " style="padding:20px;">
-   <a class="nav-link active link" aria-current="page" href="#title" style="font-size:35px; color:black;"><b>Tutorials</b></a>
+   <a class="nav-link active link" aria-current="page" href="#title" style="font-size:35px; color:black;"><b>TUTORIALS</b></a>
  </li>
  <li class="nav-item " style="padding:4px;">
    <a class="nav-link link" href="#" style="padding: 12px;margin: 17px; font-size:20px; color:black;">HOME</a>
