--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         height:38vh;
         justify-content:center;
          margin:0;
-         padding:0;">
+         padding:0;
+padding-left: 60px;
+         padding-top: 40px;">
           <iframe width="400" height="315" src="https://www.youtube.com/embed/XhqEuyWjbdo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col-12 col-sm-12 col-md-6 text-dark" style="
