--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <section class="background-section">
    <div class="container ">
       <div class="row d-flex" style="">
-        <div class="col-12 col-sm-12 col-md-6 " style="
+        <div class="col-12" style="
         height:38vh;
         justify-content:center;
          margin:0;
@@ -43,7 +43,7 @@ padding-left: 60px;
          padding-top: 40px;">
           <iframe width="400" height="315" src="https://www.youtube.com/embed/XhqEuyWjbdo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-12 col-sm-12 col-md-6 text-dark" style="
+        <div class="col-12 text-dark" style="
   height: 200px;
    justify-content: center;
   text-align: center;
