--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   text-align: center;
    margin: 0px;
    margin-top:1.5rem;">
-          <h3>Content</h3>
-          <p style="padding:0 1.5rem 0;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+          <h3>NETWORK TOPOLOGY</h3>
+          <p style="padding:0 1.5rem 0;">The arrangement of a network that comprises nodes and connecting lines via sender and receiver is referred to as network topology. The various network topologies are:</p>
 
         </div>
       </div>
