--- a/index.html
+++ b/index.html
@@ -49,11 +49,15 @@
    margin: 0px;
    margin-top:1.5rem;">
           <h3>NETWORK TOPOLOGY</h3>
-          <p style="padding:0 1.5rem 0;">The arrangement of a network that comprises nodes and connecting lines via sender and receiver is referred to as network topology. The various network topologies are:</p>
+          <p style="padding:0 1.5rem 0;">The arrangement of a network that comprises nodes and connecting lines via sender and receiver is referred to as network topology. The various network topologies are - Mesh Topology,
+        Star Topology,
+        Bus Topology,
+          Ring Topology,
+        Tree Topology</p>
 
         </div>
       </div>
-      <div class="watch-your-video text-dark" style="text-align:center; padding:3rem;">
+      <div class="watch-your-video text-dark" style="text-align:center; padding:2rem;">
         <h1>Watch Your Video <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-camera-reels" viewBox="0 0 16 16">
   <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM1 3a2 2 0 1 0 4 0 2 2 0 0 0-4 0z"/>
   <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7zm6 8.73V7.27l-3.5 1.555v4.35l3.5 1.556zM1 8v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1z"/>
