--- a/index.html
+++ b/index.html
@@ -35,18 +35,19 @@
    <div class="container ">
       <div class="row " style="">
         <div class="col-12" style="
-         height:46vh;
+         height:16rem;
          justify-content:center;
          display:flex;">
          <iframe width="400" height="250" src="https://www.youtube.com/embed/0WdUQJ0R8Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col-12 text-dark" style="
-  height: 136px;
+  height: 15rem;
   display:block;
    justify-content: center;
   text-align: center;
    margin: 0px;
-   margin-top:1.5rem;">
+   margin-top:4px
+     overflow:hidden;">
           <h3>NETWORK TOPOLOGY</h3>
           <p style="padding:0 1.5rem 0;">The arrangement of a network that comprises nodes and connecting lines via sender and receiver is referred to as network topology. The various network topologies are - Mesh Topology,
         Star Topology,
