--- a/index.html
+++ b/index.html
@@ -41,28 +41,61 @@
          <iframe width="400" height="250" src="https://www.youtube.com/embed/0WdUQJ0R8Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col-12 text-dark" style="
-  height: 16rem;
+  height: 34rem;
   display:block;
    justify-content: center;
   text-align: center;
    margin-top:4px;
      overflow:hidden;">
           <h3>NETWORK TOPOLOGY</h3>
-          <p style="padding:0 1.5rem 0;">The arrangement of a network that comprises nodes and connecting lines via sender and receiver is referred to as network topology. The various network topologies are - Mesh Topology,
+          <p style="padding:0 1.5rem 0;"><b>The arrangement of a network that comprises nodes and connecting lines via sender and receiver is referred to as network topology. The various network topologies are - Mesh Topology,
         Star Topology,
         Bus Topology,
           Ring Topology,
-        Tree Topology</p>
+        Tree Topology</b></p>
 
+          <div class="diffrent-topology" style="height:22rem; width:100%;">
+            <div class="container">
+              <div class="row">
+                <div class="col-12 col-sm-6 col-md-4" >
+                  <h5>Mesh Topology</h5>
+                  In a mesh topology there is no central connection point. Instead, each node is connected to at least one other node and usually to more than one. Each node is capable of sending messages to and receiving messages from other nodes. The nodes act as relays, passing on a message towards its final destination.
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                  <h5>Star Topology</h5>
+                  Star topology is a network topology in which each network component is physically connected to a central node such as a router, hub or switch. In a star topology, the central hub acts like a server and the connecting nodes act like clients.
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                  <h5>Bus Topology</h5>
+                Bus topology, also known as line topology, is a type of network topology in which all devices in the network are connected by one central RJ-45 network cable or coaxial cable. The single cable, where all data is transmitted between devices, is referred to as the bus, backbone, or trunk.
+                </div>
+              </div>
+            </div>
+              <div class="row m-3">
+                <div class="col-12 col-sm-6 col-md-6">
+                  <h5>Ring Topology</h5>
+                  A ring network is a network topology in which each node connects to exactly two other nodes, forming a single continuous pathway for signals through each node – a ring. Data travels from node to node, with each node along the way handling every packet.
+                </div>
+                <div class="col-12 col-sm-6 col-md-6">
+                  <h5>Tree Topology</h5>
+                  A tree topology, or star-bus topology, is a hybrid network topology in which star networks are interconnected via bus networks. Tree networks are hierarchical, and each node can have an arbitrary number of child nodes.
+                </div>
+              </div>
+          </div>
+
+
+
+          <div class="watch-your-video text-dark" style="text-align:center; padding:2rem;">
+            <h1>Watch Your Video <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-camera-reels" viewBox="0 0 16 16">
+      <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM1 3a2 2 0 1 0 4 0 2 2 0 0 0-4 0z"/>
+      <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7zm6 8.73V7.27l-3.5 1.555v4.35l3.5 1.556zM1 8v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1z"/>
+      <path d="M9 6a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM7 3a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+    </svg></h1>
+          </div>
         </div>
       </div>
-      <div class="watch-your-video text-dark" style="text-align:center; padding:2rem;">
-        <h1>Watch Your Video <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-camera-reels" viewBox="0 0 16 16">
-  <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM1 3a2 2 0 1 0 4 0 2 2 0 0 0-4 0z"/>
-  <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7zm6 8.73V7.27l-3.5 1.555v4.35l3.5 1.556zM1 8v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1z"/>
-  <path d="M9 6a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM7 3a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-</svg></h1>
-      </div>
+
+
     </div>
   </section>
   <footer class="text-center" id="footer" style=" justify-content:center;   background:linear-gradient(1deg,transparent,rgba(28,162,214,0.8)); color:black;">
