--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <a class="nav-link active link" aria-current="page" href="#title" style="font-size:35px; color:black;"><b>TUTORIALS</b></a>
  </li>
  <li class="nav-item " style="padding:4px;">
-   <a class="nav-link link" href="#" style="padding: 12px;margin: 17px; font-size:20px; color:black;">HOME</a>
+   <a class="nav-link link" href="https://ronwinny.github.io/LMS/" style="padding: 12px;margin: 17px; font-size:20px; color:black;">HOME</a>
  </li>
  <li class="nav-item " style="padding:4px; color:black;">
    <a class="nav-link link" href="#" style="padding:12px;margin:17px; margin-left:0px; font-size:20px; color:black;">DEPT</a>
