--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          height:16rem;
          justify-content:center;
          display:flex;">
-         <iframe width="400" height="250" src="https://youtu.be/O66gFWOLEbQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe width="400" height="250" src="https://www.youtube.com/embed/O66gFWOLEbQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col-12 text-dark" style="
   height: 34rem;
