--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    justify-content: center;
   text-align: center;
    margin-top:4px;
-     overflow:hidden;">
+     overflow:scroll;">
           <h3>NETWORK TOPOLOGY</h3>
           <p style="padding:0 1.5rem 0;"><b>The arrangement of a network that comprises nodes and connecting lines via sender and receiver is referred to as network topology. The various network topologies are - Mesh Topology,
         Star Topology,
